@@ -97,7 +97,7 @@ command to generate the output files.
       <match type="string" value="%PDF-" offset="0"/>
     </magic>
     <glob pattern="*.pdf"/>
-    <alias type="application/x-pdf"/>
+    <alias type="application/x-pdf"a/>
   </mime-type>
   <mime-type type="application/pgp">
     <_comment>PGP message</_comment>
@@ -141,6 +141,10 @@ command to generate the output files.
     <glob pattern="*.smil"/>
     <glob pattern="*.smi"/>
     <glob pattern="*.sml"/>
+  </mime-type>
+  <mime-type type="application/x-chm">
+    <comment>Compiled HTML Help Format</comment>
+    <glob pattern="*.chm"/>
   </mime-type>
   <mime-type type="application/vnd.corel-draw">
     <_comment>Corel Draw drawing</_comment>
