@@ -1,5 +1,10 @@
 2004-11-01  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml.in: Added application/x-chm, patch by Loic
+	Minier <lool+freedesktop@dooz.org>, fixes #794 
+
+2004-11-01  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml.in: Added application/x-pdf alias, fixes #560
 
 2004-11-01  Christophe Fergeau  <teuf@gnome.org>
